TranslationMemoryManagementUtility : Fixed Globalization.Async issues

--- a/TranslationMemoryManagementUtility/Sdl.Community.Utilities.TMTool.Tasks.RemoveDuplicates/Sdl.Community.Utilities.TMTool.Tasks.RemoveDuplicates.csproj
+++ b/TranslationMemoryManagementUtility/Sdl.Community.Utilities.TMTool.Tasks.RemoveDuplicates/Sdl.Community.Utilities.TMTool.Tasks.RemoveDuplicates.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>Sdl.Community.Utilities.TMTool.Tasks.RemoveDuplicates</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-  <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17\Plugins</PluginDeploymentPath></PropertyGroup>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17Beta</TradosFolder>
+  <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17Beta\Plugins</PluginDeploymentPath></PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -37,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.LanguagePlatform.TranslationMemory">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.LanguagePlatform.TranslationMemory.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.LanguagePlatform.TranslationMemory.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
