--- a/TranslationMemoryManagementUtility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
+++ b/TranslationMemoryManagementUtility/Sdl.Community.Utilities.TMTool.Task/Sdl.Community.Utilities.TMTool.Task.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Sdl.Community.Utilities.TMTool.Task</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17Beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
