--- a/SDLXLIFFSplitMerge/Lib/Sdl.Utilities.SplitSDLXLIFF.Lib.csproj
+++ b/SDLXLIFFSplitMerge/Lib/Sdl.Utilities.SplitSDLXLIFF.Lib.csproj
@@ -30,6 +30,9 @@
     <Reference Include="Sdl.Versioning">
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Versioning.dll</HintPath>
     </Reference>
+		<Reference Include="Sdl.Core.Globalization.Async">
+			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Core.Globalization.Async.dll</HintPath>
+		</Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
