--- a/GoogleCloudTranslationProvider/GoogleCloudTranslationProvider.csproj
+++ b/GoogleCloudTranslationProvider/GoogleCloudTranslationProvider.csproj
@@ -86,7 +86,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\System.Data.SQLite.dll</HintPath>
+      <HintPath>$(TradosFolder)\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
